Revert "Bug 1951857 - tabs in collapsed tab groups should not be in accessibility tree r=dao,desktop-theme-reviewers,tabbrowser-reviewers" for causing bc failures @ browser_bug1620341.js
This reverts commit e99fb753b3c3bdffe7aaa1a8e5cb4370386312f7.

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -195,8 +195,7 @@
     max-width: 225px;
     transition:
       min-width 100ms ease-out,
-      max-width 100ms ease-out,
-      visibility 100ms;
+      max-width 100ms ease-out;
 
     #tabbrowser-tabs[orient="horizontal"] &[fadein] {
       min-width: var(--tab-min-width-pref, var(--tab-min-width));
@@ -1012,7 +1011,6 @@ tab-group {
   #tabbrowser-tabs[orient="horizontal"] &[collapsed] > .tabbrowser-tab {
     min-width: 0 !important;
     max-width: 0 !important;
-    visibility: hidden;
     padding: 0;
     overflow-clip-margin: 0;
   }
